--- a/demos/virtual-controller/CMakeLists.txt
+++ b/demos/virtual-controller/CMakeLists.txt
@@ -2,15 +2,15 @@ cmake_minimum_required(VERSION 3.0)
 project(VirtualGameController)
 
 # Add your source files
-add_executable(MyExecutable main.cpp)
+add_executable(VirtualControllerDemo main.cpp)
 
 # Specify the path to the pre-built ViGEmClient.dll
 set(VIGEMCLIENT_DLL_PATH "C:/Users/leade/software/wii-otn/lib/ViGEmClient/VigemClient.lib")
 
 # Link your executable to the pre-built ViGEmClient.dll
-target_link_libraries(MyExecutable PRIVATE ${VIGEMCLIENT_DLL_PATH})
+target_link_libraries(VirtualControllerDemo PRIVATE ${VIGEMCLIENT_DLL_PATH})
 
 # Specify the directory where CMake should look for the DLL at runtime
-set_target_properties(MyExecutable PROPERTIES
+set_target_properties(VirtualControllerDemo PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
 )
