added working demo

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,11 @@ build/
 */build
 */build/*
 */build/
+
+*/build-ninja
+*/build-ninja/*
+*/build-ninja/
+./build-ninja
+./build-ninja/*
+./build-ninja/
+
