added arm64 support

--- a/demos/virtual-controller/CMakeLists.txt
+++ b/demos/virtual-controller/CMakeLists.txt
@@ -8,8 +8,27 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 # Add your source files
 add_executable(VirtualControllerDemo main.cpp virtualcontroller.h virtualcontroller.cpp keyboardlistener.h keyboardlistener.cpp)
 
-# Specify the path to the pre-built ViGEmClient.lib
-set(VIGEMCLIENT_DLL_PATH "${CMAKE_SOURCE_DIR}/../../lib/ViGEmClient/ViGEmClient.lib")
+#ARM64 support
+if(CMAKE_SYSTEM_PROCESSOR STREQUAL "ARM64")
+    set(ARM64_BUILD TRUE)
+else()
+    set(ARM64_BUILD FALSE)
+endif()
+
+message(STATUS "CPU ARCH: ${CMAKE_SYSTEM_PROCESSOR}")
+
+if (ARM64_BUILD)
+
+	# Specify the path to the pre-built ARM64 ViGEmClient.lib
+	set(VIGEMCLIENT_DLL_PATH "${CMAKE_SOURCE_DIR}/../../lib/ViGEmClient/ARM64/ViGEmClient.lib")
+	message(STATUS "ARM64: ViGEmClient.dll path: ${VIGEMCLIENT_DLL_PATH}")
+
+else ()
+	# Specify the path to the pre-built ViGEmClient.lib
+	set(VIGEMCLIENT_DLL_PATH "${CMAKE_SOURCE_DIR}/../../lib/ViGEmClient/ViGEmClient.lib")
+	message(STATUS "x86: ViGEmClient.dll path: ${VIGEMCLIENT_DLL_PATH}")
+endif()
+
 set(VIGEMCLIENT_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/../../lib/ViGEmClient/include")
 set(_SETUP_API "setupapi.lib")
 
