--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@ build/
 ./build-ninja/*
 ./build-ninja/
 
+#compiled commands from clang
+./compile_commands.json
+./compile_commands.json/*
+compile_commands.json/*
+
