--- a/demos/socket-server/client-demo/package.json
+++ b/demos/socket-server/client-demo/package.json
@@ -4,13 +4,18 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-		"start" : "nodemon index.ts"
+    "start": "nodemon index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "keypress": "^0.2.1",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@types/keypress": "^2.0.30",
+    "@types/keypress.js": "^2.1.1"
   }
 }
