--- a/demos/socket-server/client-demo/package.json
+++ b/demos/socket-server/client-demo/package.json
@@ -2,20 +2,17 @@
   "name": "client-demo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
     "start": "nodemon index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "keypress": "^0.2.1",
-    "nodemon": "^3.0.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "dgram": "^1.0.1",
+    "nodemon": "^3.0.1"
   },
   "devDependencies": {
-    "@types/keypress": "^2.0.30",
-    "@types/keypress.js": "^2.1.1"
+    "@types/node": "^20.6.2"
   }
 }
