--- a/demos/socket-server/client-demo/package.json
+++ b/demos/socket-server/client-demo/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
-    "@types/node": "^20.6.2"
+    "@types/node": "^20.6.2",
+    "electron": "^26.2.1"
   }
 }
