--- a/demos/socket-server/client-demo/tsconfig.json
+++ b/demos/socket-server/client-demo/tsconfig.json
@@ -1,5 +1,16 @@
-{
-	"compilerOptions" : {
-		"types": ["node"]
-	}
+{ 
+  "compilerOptions": {
+    "target": "es5",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "removeComments": false,
+    "noImplicitAny": false,
+		"ignoreDeprecations": "5.0",
+		"outDir": "dist",
+    "suppressImplicitAnyIndexErrors": true 
+  },
+  "exclude": [ "node_modules" ] 
 }
