--- a/demos/socket-server/client-demo/tsconfig.json
+++ b/demos/socket-server/client-demo/tsconfig.json
@@ -7,6 +7,7 @@
     "jsx": "react-jsx",
     "strict": true,
     "sourceMap": true,
+		"types": ["node"],
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
