--- a/demos/socket-server/client-demo/package.json
+++ b/demos/socket-server/client-demo/package.json
@@ -1,5 +1,5 @@
 {
-  "description": "A foundation for scalable desktop apps",
+  "description": "The frontend client system for WiiOTN, play Offline WII games online!",
   "keywords": [
     "electron",
     "boilerplate",
@@ -11,25 +11,25 @@
     "hot",
     "reload"
   ],
-  "homepage": "https://github.com/electron-react-boilerplate/electron-react-boilerplate#readme",
+  "homepage": "https://github.com/Identityofsine/wii-otn",
   "bugs": {
-    "url": "https://github.com/electron-react-boilerplate/electron-react-boilerplate/issues"
+    "url": "https://github.com/Identityofsine/wii-otn/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/electron-react-boilerplate/electron-react-boilerplate.git"
+    "url": "git+https://github.com/Identityofsine/wii-otn.git"
   },
   "license": "MIT",
   "author": {
-    "name": "Electron React Boilerplate Maintainers",
-    "email": "WiiOTNClientboilerplate@gmail.com",
-    "url": "https://electron-react-boilerplate.js.org"
+    "name": "f/x/",
+    "email": "identityofsine@gmail.com",
+    "url": "https://fofx.zip/"
   },
   "contributors": [
     {
-      "name": "Amila Welihinda",
-      "email": "amilajack@gmail.com",
-      "url": "https://github.com/amilajack"
+      "name": "IdentityofSine",
+			"email": "identityofsine@gmail.com",
+			"url": "https://github.com/IdentityofSine"
     }
   ],
   "main": "./src/main/main.ts",
